# Tickflow-US_Stock-Crypto-panel

./: .env.example  .gitignore  README.md  dev.ps1  dev.sh  docker-compose.yml  tiers.yaml
.claude/: launch.json
backend/: pyproject.toml
backend/app/: __init__.py  config.py  desktop.py  main.py  markets.py  secrets_store.py
backend/app/api/: alerts.py  analysis.py  backtest.py  data.py  ext_data.py  financials.py  followin_agents.py  indices.py  intraday.py  kline.py  market_recap.py  monitor_rules.py  overview.py  portfolio.py  screener.py  settings.py  stock_analysis.py  watchlist.py
backend/app/backtest/: engine.py  factor.py  strategy.py
backend/app/data_providers/: base.py  binance_provider.py  coingecko_provider.py  normalizer.py  registry.py  schemas.py  tickflow_provider.py  yfinance_provider.py
backend/app/indicators/: levels.py  pipeline.py
backend/app/jobs/: daily_pipeline.py
backend/app/services/: ai_provider.py  ai_reports.py  backtest.py  ext_data.py  ext_pull.py  extend_history.py  financial_analyzer.py  financial_sync.py  followin_agents.py  followin_client.py  index_sync.py  instrument_sync.py  kline_sync.py  market_overview_builder.py  market_recap.py  portfolio.py  preferences.py  quote_service.py  screener.py  stock_analyzer.py  stock_predictor.py  stock_reports.py
backend/app/strategy/: ai_generator.py  config.py  custom_signals.py  engine.py  monitor.py
backend/app/strategy/builtin/: consecutive_strong_days.py  donchian_breakout.py  momentum_leader.py  strong_close_near_high.py  trend_breakout.py
backend/app/tickflow/: capabilities.py  client.py  policy.py  pools.py  repository.py
backend/tests/: test_portfolio.py  test_quote_flush_guard.py
backend/tests/backtest/: test_engine_portfolio.py  test_full_simulation_tail.py  test_strategy_backtest_correctness.py
docs/: strategy-builder-step1.md  strategy-builder-step2.md  strategy-example.md  strategy-guide.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.js  vite.config.ts
frontend/src/: index.css  router.tsx
packaging/: tickflow.iss  tickflow.spec
screenshots/: README.md
(+138 files in other folders)
