[project]
name = "tickflow-stock-panel-backend"
version = "0.2.0"
description = "美股 & 加密货币选股 + 监控 + 回测面板 — TickFlow + Binance 适配"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.6",
    "sse-starlette>=2.0",
    # Data
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "pandas>=2.2",                # 仅在 BacktestService 边界使用,见 §7.4 / ADR-19
    "fastexcel>=0.10",            # Polars 读取 xlsx/xls
    # TickFlow 官方 SDK
    "tickflow[all]>=0.1.23",
    # Scheduling
    "apscheduler>=3.10",
    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # AI(可选,但默认装上)
    "openai>=1.40",               # OpenAI 兼容适配器复用 openai SDK
    "httpx>=0.27",
    "platformdirs>=4.0",          # 桌面版用户数据目录 (跨平台持久可写)
    "winotify>=1.1; sys_platform == 'win32'",  # Windows 系统通知 (进操作中心)
    "plyer>=2.1",                 # 系统通知跨平台兜底 (macOS/Linux)
    "yfinance>=1.5.1",
]

[project.optional-dependencies]
# Legacy CPU runtime: install the Polars compatibility kernel on
# machines without AVX2/FMA support.
# Enable with: uv sync --extra legacy-cpu
legacy-cpu = [
    "polars[rtcompat]>=1.0",
]

# 回测依赖 vectorbt → numba → llvmlite,体积大且 macOS/Intel 上无预构建 wheel 时
# 需要 brew install cmake 现场编译。挪到可选 extras,主依赖瘦身。
# 启用:`uv sync --extra backtest`
backtest = [
    "vectorbt>=0.26",
]

# 桌面客户端依赖: pywebview 桌面窗口。打包用 (PyInstaller), 生产/Docker 不需要。
# 启用:`uv sync --extra desktop`
desktop = [
    "pywebview>=5.0",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]   # 长行交给 fmt

[tool.pytest.ini_options]
asyncio_mode = "auto"
